finished contact section

--- a/portfolio-website/public/index.html
+++ b/portfolio-website/public/index.html
@@ -27,7 +27,7 @@
             </br>
             <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt</p>
             </br>
-            <ul>
+            <ul class="icon-list">
               <li>
                 <figure><img src="../src/HTML5Logo.svg" alt="SVG Image"></figure>
                 <figcaption>HTML5</figcaption>
@@ -80,10 +80,23 @@
           <div class="section-expand"><a href="#">View all</a></div>
         </div>
       </section>
+
+      <section style="height: 160px; display: flex; justify-content: center; align-items: center; flex-direction: row;">
+        <div style="height: 50%; width: 900px; display: flex; justify-content: center; align-items: center;">
+          <hr>
+          <ul class="media-list">
+            <li><img src="../src/GmailLogo.svg"></li>
+            <li><img src="../src/LinkedInLogo.svg"></li>
+            <li><img src="../src/InsLogo.svg"></li>
+            <li><img src="../src/WeChatLogo.svg"></li>
+          </ul>
+          <hr>
+        </div>
+      </section>
     </main>
 
     <!-- for testing y scroll -->
-    <div class="test" style="height: 400px;"></div>
+    <!-- <div class="test" style="height: 400px;"></div> -->
 
   </body>
 </html>
