changed css path

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="../src/index.css" />
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/src/index.css" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <script src="../src/copyToClipboard.js"></script>
+    <script src="%PUBLIC_URL%/src/copyToClipboard.js"></script>
     <title>React App (Portfolio)</title>
   </head>
 
